--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,9 @@
         <button hx-get="/text" hx-target="#time">Click Me</button>
         <div id="time"></div>
       </article>
+      <article>
+        <div hx-get="/text" hx-trigger="every 1s">Auto Click</div>
+      </article>
     </main>
   </body>
 </html>
